How to use .astro components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
       },
     ],
     "paths": {
-      "@pageTypes/*": ["./src/types/pages/*"],
-      "@dataPages/*": ["./src/data/pages/*"]
+      "@pageTypes/*": ["./src/types/pages/*"]
     }
   }
 }
