--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/preact": "^3.5.3",
     "@astrojs/rss": "^4.0.9",
     "astro": "^4.16.7",
     "mathjax": "^3.2.2",
+    "preact": "^10.24.3",
     "typescript": "^5.6.3"
   }
 }
